--- a/package.json
+++ b/package.json
@@ -13,16 +13,27 @@
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.3.0",
     "@tanstack/react-query": "^5.66.0",
+    "@types/leaflet": "^1.9.16",
     "axios": "^1.7.9",
+    "cookie": "^1.0.2",
+    "formik": "^2.4.6",
     "framer-motion": "^12.3.1",
+    "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
     "next": "15.1.6",
     "react": "^18.3.1",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
-    "react-error-boundary": "^5.0.0"
+    "react-error-boundary": "^5.0.0",
+    "react-icons": "^5.4.0",
+    "react-leaflet": "^4.2.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query-devtools": "^5.66.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
